--- a/back-blog/.env
+++ b/back-blog/.env
@@ -2,7 +2,7 @@ BACKEND_PORT=3000
 BACKEND_URL=http://localhost:$BACKEND_PORT
 DB_NAME=blog
 DB_USER=sa
-DB_PASS=Andr3s82
+DB_PASS=12345678
 DB_HOST=localhost
 DB_PORT=1433
 ```
