--- a/front-blog/package.json
+++ b/front-blog/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.50.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.3",
+    "sweetalert2": "^11.10.5",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
